--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       font-family: Arial, sans-serif;
     }
     .hero {
-      background-color: #e9f5ff;
+      background-color: #007bff;
+      color: white;
       padding: 60px 20px;
       text-align: center;
     }
@@ -28,7 +29,7 @@
       margin-right: 10px;
     }
     .btn-contact {
-      background-color: #0077cc;
+      background-color: #28a745;
       color: white;
       padding: 10px 20px;
       border: none;
@@ -36,11 +37,24 @@
       text-decoration: none;
     }
     .btn-contact:hover {
-      background-color: #005fa3;
+      background-color: #218838;
+    }
+    .pricing-card {
+      background-color: #f8f9fa;
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .testimonial {
+      font-style: italic;
+      color: #666;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
@@ -50,6 +64,7 @@
     </div>
   </nav>
 
+  <!-- Hero Section -->
   <div class="hero">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Vector_based_image_icon.svg/2048px-Vector_based_image_icon.svg.png" alt="Logo" class="logo mb-3" style="max-height: 100px;">
     <h1>Affordable Tech Support You Can Trust</h1>
@@ -57,6 +72,7 @@
     <a href="#contact" class="btn-contact">Request Support</a>
   </div>
 
+  <!-- Services Section -->
   <div class="section container" id="services">
     <h2>Services</h2>
     <ul>
@@ -68,22 +84,45 @@
     </ul>
   </div>
 
-  <div class="section container" id="about">
-    <h2>About</h2>
-    <p>Hi, I’m Abz. I’ve worked with Apple and helped hundreds of clients fix everyday tech issues. MyTechM8 is my way of offering simple, reliable, and affordable support to people who need it — without the stress of big-box store prices.</p>
+  <!-- Pricing Section -->
+  <div class="section container" id="pricing">
+    <h2>Pricing</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="pricing-card">
+          <h3>Flat Rate</h3>
+          <p>$50 per session</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="pricing-card">
+          <h3>Hourly Rate</h3>
+          <p>$30 per hour</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="pricing-card">
+          <h3>Monthly Package</h3>
+          <p>$100 per month</p>
+        </div>
+      </div>
+    </div>
   </div>
 
+  <!-- Testimonials Section -->
+  <div class="section container" id="testimonials">
+    <h2>What Our Clients Say</h2>
+    <div class="testimonial">
+      "MyTechM8 helped me fix my laptop in no time! Super easy and affordable. Highly recommend!"
+      <br>- Sarah T.
+    </div>
+    <div class="testimonial">
+      "Abz was professional, quick, and answered all my tech questions. Very happy with the service!"
+      <br>- John D.
+    </div>
+  </div>
+
+  <!-- Contact Section -->
   <div class="section container" id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
-    <p>Phone: <a href="tel:+1234567890">+1 234 567 890</a></p>
-    <p><a href="https://wa.me/1234567890" target="_blank" class="btn-contact mt-3">Message on WhatsApp</a></p>
-  </div>
-
-  <footer>
-    <p>&copy; 2025 MyTechM8. All rights reserved.</p>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+    <p>Email: <a href="mailto:your@email.com">your@email.com</a></
