--- a/index.html
+++ b/index.html
@@ -8,57 +8,58 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+    .navbar {
+      background-color: #0077cc;
+    }
+    .navbar-brand img {
+      max-height: 50px;
     }
     .hero {
-      background-color: #007bff;
+      background-color: #0077cc;
       color: white;
-      padding: 60px 20px;
       text-align: center;
+      padding: 100px 20px;
+    }
+    .btn-contact, .btn-book {
+      background-color: #1a73e8;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    .btn-contact:hover, .btn-book:hover {
+      background-color: #005fa3;
     }
     .section {
       padding: 40px 20px;
     }
+    .pricing-card {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      background-color: #fff;
+      margin: 10px 0;
+    }
     footer {
       background-color: #1a1a1a;
-      color: #fff;
+      color: white;
       text-align: center;
       padding: 20px 0;
-    }
-    .logo {
-      max-height: 50px;
-      margin-right: 10px;
-    }
-    .btn-contact {
-      background-color: #28a745;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      text-decoration: none;
-    }
-    .btn-contact:hover {
-      background-color: #218838;
-    }
-    .pricing-card {
-      background-color: #f8f9fa;
-      padding: 20px;
-      border-radius: 8px;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .testimonial {
-      font-style: italic;
-      color: #666;
-      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Vector_based_image_icon.svg/2048px-Vector_based_image_icon.svg.png" alt="Logo" class="logo">
+        <img src="https://your-github-link.com/path-to-your-logo/m8logo.png" alt="Logo">
         MyTechM8
       </a>
     </div>
@@ -66,10 +67,10 @@
 
   <!-- Hero Section -->
   <div class="hero">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Vector_based_image_icon.svg/2048px-Vector_based_image_icon.svg.png" alt="Logo" class="logo mb-3" style="max-height: 100px;">
+    <img src="https://your-github-link.com/path-to-your-logo/m8logo.png" alt="Logo" style="max-height: 100px;" class="mb-3">
     <h1>Affordable Tech Support You Can Trust</h1>
     <p>Fast, honest, and local help for your everyday tech problems.</p>
-    <a href="#contact" class="btn-contact">Request Support</a>
+    <a href="https://wa.me/1234567890" target="_blank" class="btn-contact">Message on WhatsApp</a>
   </div>
 
   <!-- Services Section -->
@@ -90,20 +91,23 @@
     <div class="row">
       <div class="col-md-4">
         <div class="pricing-card">
-          <h3>Flat Rate</h3>
+          <h4>Flat Rate</h4>
           <p>$50 per session</p>
+          <p>Perfect for small repairs.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="pricing-card">
-          <h3>Hourly Rate</h3>
-          <p>$30 per hour</p>
+          <h4>Hourly Rate</h4>
+          <p>$40 per hour</p>
+          <p>For larger troubleshooting or setup.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="pricing-card">
-          <h3>Monthly Package</h3>
-          <p>$100 per month</p>
+          <h4>Remote Support</h4>
+          <p>$30 per session</p>
+          <p>Quick and efficient online troubleshooting.</p>
         </div>
       </div>
     </div>
@@ -111,18 +115,22 @@
 
   <!-- Testimonials Section -->
   <div class="section container" id="testimonials">
-    <h2>What Our Clients Say</h2>
-    <div class="testimonial">
-      "MyTechM8 helped me fix my laptop in no time! Super easy and affordable. Highly recommend!"
-      <br>- Sarah T.
-    </div>
-    <div class="testimonial">
-      "Abz was professional, quick, and answered all my tech questions. Very happy with the service!"
-      <br>- John D.
-    </div>
+    <h2>Testimonials</h2>
+    <p>"Abz helped me fix my laptop in no time! I highly recommend his service!" - Jane D.</p>
+    <p>"Fast, affordable, and very knowledgeable. Definitely my go-to tech support!" - John S.</p>
   </div>
 
-  <!-- Contact Section -->
-  <div class="section container" id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:your@email.com">your@email.com</a></
+  <!-- Booking Section -->
+  <div class="section container" id="booking">
+    <h2>Request Support</h2>
+    <a href="https://calendly.com" target="_blank" class="btn-book">Book a Session</a>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 MyTechM8. All rights reserved.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
