--- a/index.html
+++ b/index.html
@@ -1,61 +1,51 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyTechM8</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
+      background-color: #f8f9fa;
     }
     .navbar {
-      background-color: #1a1a1a;
+      position: absolute;
+      width: 100%;
+      z-index: 1000;
     }
-    .navbar-brand img {
+    .logo {
       height: 40px;
       margin-right: 10px;
     }
-    .hero-section {
-      background: linear-gradient(to right, #1c1c1c, #2c3e50);
+    .hero {
+      height: 100vh;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
-      padding: 100px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
+      padding: 20px;
     }
-    .hero-section h1 {
+    .hero h1 {
       font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    .hero-section p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .btn-main {
-      background-color: #00aaff;
-      border: none;
-      padding: 12px 24px;
-      color: white;
-      border-radius: 4px;
-      font-weight: 600;
-      text-decoration: none;
-    }
-    .services, .pricing, .testimonials, .contact {
-      padding: 60px 20px;
-    }
-    .section-title {
-      font-size: 2rem;
       font-weight: 700;
-      text-align: center;
-      margin-bottom: 40px;
     }
-    .card {
-      border: none;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+    .section {
+      padding: 60px 20px;
+      background-color: white;
+      margin: 20px 0;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
     footer {
       background-color: #1a1a1a;
@@ -63,99 +53,79 @@
       text-align: center;
       padding: 20px 0;
     }
+    .btn-primary {
+      background-color: #0077cc;
+      border: none;
+    }
+    .btn-primary:hover {
+      background-color: #005fa3;
+    }
+    .testimonial {
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="m8logo.png" alt="MyTechM8 Logo" />
-        <span>MyTechM8</span>
-      </a>
-    </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent px-3">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="m8logo.png" alt="MyTechM8 Logo" class="logo">
+      <span class="fw-bold">MyTechM8</span>
+    </a>
   </nav>
 
-  <section class="hero-section">
-    <div class="container">
-      <h1>Fast. Friendly. Tech Support.</h1>
-      <p>Local, honest help for your everyday tech issues.</p>
-      <a href="#contact" class="btn-main">Book a Support Call</a>
+  <div class="hero">
+    <div>
+      <img src="m8logo.png" alt="MyTechM8 Logo" style="max-height: 100px; margin-bottom: 20px;">
+      <h1>Affordable Tech Support You Can Trust</h1>
+      <p>Fast, honest, and local help for your everyday tech problems.</p>
+      <a href="#contact" class="btn btn-primary">Request Support</a>
     </div>
-  </section>
+  </div>
 
-  <section class="services">
-    <div class="container">
-      <h2 class="section-title">Services</h2>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <div class="card p-4 mb-4">
-            <h5>PC & Laptop Help</h5>
-            <p>Slow computer? Virus? I’ll fix it fast.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card p-4 mb-4">
-            <h5>Phone Setup & Troubleshooting</h5>
-            <p>iPhone, Android, or something else — I’ve got you.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card p-4 mb-4">
-            <h5>Device Setup</h5>
-            <p>Wi-Fi, printers, smart TVs, and more — set up right.</p>
-          </div>
-        </div>
-      </div>
+  <div class="container">
+    <div class="section" id="services">
+      <h2 class="text-center">Services</h2>
+      <ul>
+        <li>Computer & Laptop Troubleshooting</li>
+        <li>Phone & Tablet Help (iPhone, Android)</li>
+        <li>Wi-Fi, Printer, and Device Setup</li>
+        <li>Remote Tech Support</li>
+        <li>Senior-Friendly Assistance</li>
+      </ul>
     </div>
-  </section>
 
-  <section class="pricing bg-light">
-    <div class="container">
-      <h2 class="section-title">Pricing</h2>
-      <div class="row text-center">
-        <div class="col-md-6 offset-md-3">
-          <div class="card p-4">
-            <h5>Flat Rate</h5>
-            <p>$40 per session (up to 1 hour)</p>
-            <p>Includes remote or in-person support</p>
-          </div>
-        </div>
-      </div>
+    <div class="section" id="about">
+      <h2 class="text-center">About</h2>
+      <p>Hi, I’m Abz. I’ve worked with Apple and helped hundreds of clients fix everyday tech issues. MyTechM8 is my way of offering simple, reliable, and affordable support to people who need it — without the stress of big-box store prices.</p>
     </div>
-  </section>
 
-  <section class="testimonials">
-    <div class="container">
-      <h2 class="section-title">What People Say</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <blockquote class="blockquote">
-            “Fixed my laptop in under an hour. Very professional!” – Sarah K.
-          </blockquote>
-        </div>
-        <div class="col-md-6">
-          <blockquote class="blockquote">
-            “Super helpful with setting up my mom’s phone. Highly recommend.” – David R.
-          </blockquote>
-        </div>
-      </div>
+    <div class="section" id="pricing">
+      <h2 class="text-center">Pricing</h2>
+      <ul>
+        <li>Remote Support: $25/hr</li>
+        <li>In-Person Visit: $40 flat rate</li>
+        <li>Senior Discount: 15% off</li>
+      </ul>
     </div>
-  </section>
 
-  <section class="contact bg-light">
-    <div class="container">
-      <h2 class="section-title">Contact</h2>
-      <p class="text-center">Need help? Reach out via WhatsApp or email.</p>
-      <div class="text-center">
-        <a href="mailto:your@email.com" class="btn-main mb-2">Email</a>
-        <a href="https://wa.me/1234567890" class="btn-main">WhatsApp</a>
-      </div>
+    <div class="section" id="testimonials">
+      <h2 class="text-center">Testimonials</h2>
+      <p class="testimonial">"Abz fixed my Wi-Fi in minutes. Super polite and efficient!" - Sarah T.</p>
+      <p class="testimonial">"I thought my laptop was dead, but he brought it back to life. Thanks Abz!" - Mark D.</p>
     </div>
-  </section>
+
+    <div class="section" id="contact">
+      <h2 class="text-center">Contact</h2>
+      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>Phone: <a href="tel:+1234567890">+1 234 567 890</a></p>
+      <p><a href="https://wa.me/1234567890" target="_blank" class="btn btn-primary">Message on WhatsApp</a></p>
+    </div>
+  </div>
 
   <footer>
     <p>&copy; 2025 MyTechM8. All rights reserved.</p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
