--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         <section class="hero">
             <div class="container">
                 <h1>Tech Support That Gets You</h1>
-                <p>Simple, honest, and reliable IT and web help for small businesses.</p>
+                <p>Simple, affordale, and reliable tech help for all your devices, hardware and software.</p>
                 <a href="contact.html" class="btn">Get Help Today</a>
                 <a href="services.html" class="btn btn-outline">Our Services</a>
             </div>
@@ -466,7 +466,7 @@
             <div class="container">
                 <div class="section-title">
                     <h2>What We Do</h2>
-                    <p>We help small businesses with their tech needs so they can focus on what they do best.</p>
+                    <p>We help small businesses and locals with their tech needs and help people set up Wi-Fi, fix slow computers, install printers, troubleshoot smart devices, etc.</p>
                 </div>
                 <div class="services-grid">
                     <div class="service-card">
@@ -480,14 +480,14 @@
                         <div class="service-icon">
                             <i class="fas fa-headset"></i>
                         </div>
-                        <h3>Small Business Tech Support</h3>
+                        <h3>General Tech Support</h3>
                         <p>Ongoing IT help for your computers, networks, and software.</p>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-calendar-check"></i>
                         </div>
-                        <h3>Monthly IT Care Plans</h3>
+                        <h3>One-Time and Monthly Plans</h3>
                         <p>Affordable packages to keep your tech running smoothly.</p>
                     </div>
                     <div class="service-card">
@@ -550,7 +550,7 @@
                     </div>
                     <div class="faq-item">
                         <div class="faq-question">Can you help me choose software or tools?</div>
-                        <div class="faq-answer">Absolutely. We help you pick what works best for your business without pushing expensive options you don't need.</div>
+                        <div class="faq-answer">Absolutely. We help you pick what works best for you without pushing expensive options you don't need.</div>
                     </div>
                     <div class="faq-item">
                         <div class="faq-question">Do you come on-site?</div>
@@ -567,7 +567,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>MyTechM8</h3>
-                    <p>Simple, honest tech support for small businesses in Toronto and beyond.</p>
+                    <p>Reliable, budget-friendly tech support for small businesses in the Gtaa.</p>
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
@@ -582,7 +582,7 @@
                     <h3>Services</h3>
                     <ul>
                         <li><a href="services.html">Website Design</a></li>
-                        <li><a href="services.html">IT Support</a></li>
+                        <li><a href="services.html">General Support</a></li>
                         <li><a href="services.html">Maintenance Plans</a></li>
                         <li><a href="services.html">Remote Help</a></li>
                     </ul>
@@ -592,7 +592,7 @@
                     <ul>
                         <li><i class="fas fa-envelope"></i> support@mytechm8.ca</li>
                         <li><i class="fas fa-phone"></i> (416) 555-1234</li>
-                        <li><i class="fas fa-clock"></i> Mon-Fri: 9am-6pm</li>
+                        <li><i class="fas fa-clock"></i> Mon-Sun: 9am-6pm</li>
                     </ul>
                 </div>
             </div>
