--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                 
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        "I was skeptical about remote support at first, but Abdullah walked me through the entire process and fixed my printer issues without needing to come onsite. Saved me time and money!"
+                        "I was skeptical about remote support at first, but mike walked me through the entire process and fixed my printer issues without needing to come onsite. Saved me time and money!"
                     </div>
                     <div class="testimonial-author">
                         - James L., Accountant
@@ -821,7 +821,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>MyTechM8</h3>
-                    <p>Reliable, budget-friendly tech support for small businesses in the GTA.</p>
+                    <p>Reliable, budget-friendly tech support for locals and businesses in the GTA.</p>
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
