--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyTechM8 - IT and Tech Needs All In One</title>
+    <title>MyTechM8 - All Your IT and Tech Solutions </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Global Styles */
@@ -451,7 +451,7 @@
     <section id="home" class="page active">
         <div class="hero">
             <div class="container">
-                <h1>Tech Support That Gets You</h1>
+                <h1>All Your IT and Tech Solutions</h1>
                 <p>Simple, Affordable, and Reliable tech help for all your devices, and tech needs.</p>
                 <a href="#" class="btn" onclick="showPage('services')">Get Help Today</a>
                 <a href="#" class="btn btn-outline" onclick="showPage('services')">Our Services</a>
