--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         --teal-dark: #2c6566;
         --teal-medium: #25bdb0;
         --teal-light: #3ab7a6;
-        --accent-yellow: #f5d061;
+        --accent-yellow: #F2C700;
         --white: #ffffff;
-        --light-gray: #f8f9fa; /* Light greyish-white */
+        --light-gray: #F1F1F1; /* Light greyish-white */
         --medium-gray: #666666;
         --dark-gray: #333333;
         --section-gray: #f1f3f5; /* Slightly darker gray for sections */
