--- a/index.html
+++ b/index.html
@@ -499,6 +499,26 @@
         .logo-icon {
             font-size: 32px;
         }
+        /* Logo and all title elements */
+.logo,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #1D1E20;
+  font-family: Georgia, serif;
+}
+
+/* Why Choose Us section (matching footer background color) */
+#why-choose-us {
+  background-color: #343a40; /* same as footer's dark background */
+  color: #ffffff;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+
     }
 </style>
 </head>
