--- a/index.html
+++ b/index.html
@@ -185,36 +185,64 @@
     }
     
     /* Hero Section */
-    .hero {
-    background-color: var(--light-gray);
+    /* ===== Hero Section ===== */
+.hero {
+    background: linear-gradient(rgba(31, 52, 64, 0.85), /* Dark blue overlay */
+                url('https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center/cover;
+    color: white;
     text-align: center;
-    padding: 40px 0; /* Reduced padding (40px top and bottom) */
-    color: var(--dark-gray);
+    min-height: 100vh;
     display: flex;
     align-items: center;
-    min-height: 300px; /* Ensures minimum height for the hero section */
+    justify-content: center;
+    padding: 20px 0;
 }
 
 .hero .container {
-    width: 100%;
+    max-width: 900px;
+    padding: 0 20px;
 }
 
 .hero h1 {
-    font-size: 2.8rem;
-    margin-bottom: 15px;
-    color: var(--dark-blue);
+    font-size: 3.5rem;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
     line-height: 1.2;
 }
 
 .hero p {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     max-width: 700px;
-    margin: 0 auto 30px;
-    color: var(--medium-gray);
+    margin: 0 auto 40px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
 }
 
+/* ===== Hero Buttons ===== */
 .hero .btn {
-    margin: 0 10px; /* Space between buttons */
+    background-color: var(--teal-medium);
+    color: white;
+    border: 2px solid var(--teal-medium);
+    padding: 15px 30px;
+    margin: 0 10px;
+    font-size: 1.1rem;
+    transition: all 0.3s ease;
+}
+
+.hero .btn:hover {
+    background-color: transparent;
+    color: white;
+    transform: translateY(-3px);
+}
+
+.hero .btn-outline {
+    background-color: transparent;
+    border-color: white;
+    color: white;
+}
+
+.hero .btn-outline:hover {
+    background-color: white;
+    color: var(--dark-blue);
 }
     /* Services Overview */
     .services-overview {
