--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     /* Color Scheme */
     :root {
         --dark-blue: #1F3440;
-        --teal-dark: #2c6566;
+        --teal-dark: #338a8a;
         --teal-medium: #25bdb0;
         --teal-light: #3ab7a6;
         --accent-yellow: #F2C700;
         --white: #ffffff;
-        --light-gray: #F1F1F1; /* Light greyish-white */
+        --light-gray: #cccccc; /* Light greyish-white */
         --medium-gray: #666666;
         --dark-gray: #333333;
         --section-gray: #f1f3f5; /* Slightly darker gray for sections */
