--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         --teal-medium: #25bdb0;
         --teal-light: #3ab7a6;
         --accent-yellow: #F2C700;
-        --white: #ffffff;
+        --white: #faf2f2;
         --light-gray: #cccccc; /* Light greyish-white */
         --medium-gray: #666666;
         --dark-gray: #333333;
